--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <img src="forkit.gif" id="octocat" alt="" />
-
+Hello world
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
